@@ -1,2 +1,10 @@
 # JavaFX-Kalender
 Calender for Holidays and Projects made with JavaFx
+
+Windows installation
+1. Install Java 12
+2. Umgebungsvariable setzen Path mit jdk/bin hinzufügen
+3. JavaFx herrunterladen
+   https://openjfx.io/
+4. Folgenden Befehl in der Batch zum ausführen, vorher Pfad von JavaFX ändern
+java <--module-path sdkpath> --add-modules=javafx.controls,javafx.graphics,javafx.fxml -jar kalender.jar
